    Vladimir Nadvornik <nadvornik@suse.cz>
  * various small bugfixes or cosmetic fixes picked from still GPLed parts of
    cdrtools-2.01.01a24, excluding meta changes and big tree.c and mkisofs.c
    refactoring. Stream file name option enabled now.
  * wodim.1: "you have 4 seconds to abort ..."
  * defaults.c: Correct fallback to CDR_FIFOSIZE and correct error message
    on bad input.

  [ Peter Samuelson ]
  * Clean up Linux-2.6 CD/DVD-R drive detection, clearer error messages.

 -- Eduard Bloch <blade@debian.org>  Tue, 23 Jan 2007 19:13:44 +0100

cdrkit (1.1.2) RELEASED; urgency=low

  [ Stefan Huehner ]
  * more Cstyle cleanups

  [ Eduard Bloch ]
  * stop confusion and bailing out if burnfree/burnproof options have been
    explicitely specified
  * be move carefull with -dummy when the DVD media may not support it
  * extracting drive's default speed in attach_mdvd()
  * automatic recorder device guessing code, currently Linux-only

  [ Peter Samuelson ]
  * Fix icedax cddb query, based on a patch from Heiko Schlenker

 -- Eduard Bloch <blade@debian.org>  Sat, 13 Jan 2007 00:45:38 +0100

cdrkit (1.1.1) RELEASED; urgency=low

  * added geteltorito script from Rainer Krienke

  [ Eduard Bloch ]
  * more verbose abort message if track is specified with some maintainance
    command (#369677)
  * Added more DVD related fixes from SuSE's wodim-1.0pre5cvs-6.src.rpm
  * --devices option for wodim (modeled after cdrskin's output), working on
    Linux and Cygwin
  * Open-By-Device-Letter mode on Cygwin
  * -msifile=... option to store -msinfo output reliably in a dedicated file
  * clear profile names printing (using code from libburnia, thanks to Thomas
    Schmidt)
  * cleanup with unused embedded CVS revision strings from Schilling and
    more gcc -Wall correctness
  * reenabled -format functionality (bug in program function control flow)
  * get maximum DMA buffer size from sysfs on Linux, where possible
  * enable BURN-Free by default where possible