@@ -9,6 +9,8 @@ cdrkit (9:1.1.3-1) unstable; urgency=medium
     + LFS support in UDF (closes: #411178, #401988)
     + transfer size extraction fix (part of #407773)
     + default gracetime value changed in recommendations (closes: #408844)
+    + telling the user when the drive is mounted and therefore busy
+      (closes: #414271)
   * Relaxed version dependency of cmake (closes: #407163)
 
  -- Eduard Bloch <blade@debian.org>  Fri, 19 Jan 2007 08:54:05 +0100
